apps/expense-ui/base/namespace.yaml
---
# ============================================================
# demok8s / apps/expense-ui/base/namespace.yaml
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: expense-ui
  labels:
    kubernetes.io/metadata.name: expense-ui
    app.kubernetes.io/name: expense-ui
    managed-by: argocd
