apps/expense-ui/base/service.yaml
---
# ============================================================
# demok8s / apps/expense-ui/base/service.yaml
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: expense-ui-service
  namespace: expense-ui
  labels:
    app.kubernetes.io/name: expense-ui
spec:
  selector:
    app.kubernetes.io/name: expense-ui
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
